tests/lex-fail/float_missing_exp1_eof.fl.0.exp
Error: float_missing_exp1_eof.fl(1,1): Missing exponent part of floating point literal
123.32e
^       
